[gd_scene load_steps=2 format=3 uid="uid://dq4u2fdnraeoq"]

[ext_resource type="Script" path="res://Gameplay/countdown_timer.gd" id="1_jfn4h"]

[node name="CountdownTimer" type="Node"]
script = ExtResource("1_jfn4h")

[node name="TickTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timeout"]
